Fixed double scrollbar.

--- a/jujugui/static/gui/src/app/components/inspector/config/_config.scss
+++ b/jujugui/static/gui/src/app/components/inspector/config/_config.scss
@@ -38,11 +38,12 @@
   }
 
   &__buttons {
+    flex: 0 0 auto;
     height: 60px;
     transition: height .2s ease;
+    overflow: hidden;
 
     &--hidden {
-      overflow: hidden;
       height: 0;
     }
   }
